--- a/scss/blocks/_select.scss
+++ b/scss/blocks/_select.scss
@@ -24,7 +24,7 @@
   background: #fff;
   border: 1px solid $outline;
   border-radius: 8px;
-  padding: 16px 18px;
+  padding: 16px 12px 16px 18px;
   cursor: pointer;
   position: relative;
 }
@@ -56,6 +56,11 @@
   padding: 0 8px;
   background: #fff;
   z-index: 1;
+
+  @media screen and (max-width: 420px) {
+    left: 6px;
+    padding: 0 6px;
+  }
 }
 
 .select-label-text {
