--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,12 @@ a {
   padding: 0 24px;
 }
 
+@media screen and (max-width: 600px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+
 .btn {
   display: inline-block;
   font-size: 16px;
@@ -251,6 +257,134 @@ a {
 
 .arrow-up:active {
   background: rgba(15, 124, 255, 0.2);
+}
+
+.select {
+  position: relative;
+}
+
+.select._active .select__header {
+  -webkit-border-radius: 8px 8px 0 0;
+          border-radius: 8px 8px 0 0;
+}
+
+.select._active .select__body {
+  display: block;
+}
+
+.select._active .select-icon {
+  -webkit-transform: scale(-1);
+      -ms-transform: scale(-1);
+          transform: scale(-1);
+}
+
+.select__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: #fff;
+  border: 1px solid var(--outline);
+  -webkit-border-radius: 8px;
+          border-radius: 8px;
+  padding: 16px 12px 16px 18px;
+  cursor: pointer;
+  position: relative;
+}
+
+.select-current {
+  font-size: 18px;
+}
+
+.select-icon {
+  width: 9px;
+  height: 9px;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.select-icon img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.select-label {
+  position: absolute;
+  top: -1px;
+  left: 12px;
+  font-size: 12px;
+  color: var(--second);
+  padding: 0 8px;
+  background: #fff;
+  z-index: 1;
+}
+
+@media screen and (max-width: 420px) {
+  .select-label {
+    left: 6px;
+    padding: 0 6px;
+  }
+}
+
+.select-label-text {
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+.select__body {
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 100%;
+  -webkit-transform: translate(0, 100%);
+      -ms-transform: translate(0, 100%);
+          transform: translate(0, 100%);
+  display: none;
+  max-height: 150px;
+  background: #fff;
+  border: 1px solid var(--outline);
+  -webkit-border-radius: 0 0 8px 8px;
+          border-radius: 0 0 8px 8px;
+  margin: -1px 0 0 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1;
+}
+
+.select-item {
+  text-transform: uppercase;
+  background: #fff;
+  padding: 12px 18px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.select-item:nth-child(odd) {
+  background: #fcfcfc;
+}
+
+.select-item:hover {
+  background: #f7f7f7;
 }
 
 .header {
@@ -466,6 +600,8 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 @media screen and (max-width: 1020px) {
@@ -591,6 +727,7 @@ a {
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
+    z-index: 10;
   }
   .nav-menu._show {
     background: rgba(46, 139, 248, 0.85);
@@ -754,6 +891,12 @@ a {
   padding: 120px 0 0 0;
 }
 
+@media screen and (max-width: 700px) {
+  .main {
+    padding: 110px 0 0 0;
+  }
+}
+
 .main__body {
   display: -webkit-box;
   display: -webkit-flex;
@@ -769,13 +912,48 @@ a {
           justify-content: space-between;
 }
 
+@media screen and (max-width: 900px) {
+  .main__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: initial;
+    -webkit-justify-content: initial;
+        -ms-flex-pack: initial;
+            justify-content: initial;
+  }
+}
+
 .main__content {
-  max-width: 500px;
-  width: 100%;
+  min-width: 500px;
+  width: 500px;
+}
+
+@media screen and (max-width: 900px) {
+  .main__content {
+    min-width: auto;
+    max-width: 500px;
+    width: 100%;
+    margin: 20px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .main-title {
+    display: none;
+  }
 }
 
 .main__rent {
   margin: 30px 0 0 0;
+}
+
+@media screen and (max-width: 900px) {
+  .main__rent {
+    margin: 0;
+  }
 }
 
 .main__price {
@@ -796,6 +974,12 @@ a {
   color: var(--accent);
 }
 
+@media screen and (max-width: 500px) {
+  .main__price-all {
+    font-size: 40px;
+  }
+}
+
 .main__price__correction {
   display: -webkit-box;
   display: -webkit-flex;
@@ -813,8 +997,20 @@ a {
   font-weight: 600;
 }
 
+@media screen and (max-width: 370px) {
+  .main__price-day {
+    font-size: 14px;
+  }
+}
+
 .main__price-deposit {
   color: var(--second);
+}
+
+@media screen and (max-width: 370px) {
+  .main__price-deposit {
+    font-size: 14px;
+  }
 }
 
 .main-btn {
@@ -822,6 +1018,12 @@ a {
   font-weight: 700;
   padding: 18px 82px;
   margin: 20px 0 0 0;
+}
+
+@media screen and (max-width: 900px) {
+  .main-btn {
+    width: 100%;
+  }
 }
 
 .main__selects {
@@ -841,8 +1043,20 @@ a {
   margin: 0 8px 0 0;
 }
 
+@media screen and (max-width: 900px) {
+  .main__select-car {
+    width: 80%;
+  }
+}
+
 .main__select-day {
   width: 72px;
+}
+
+@media screen and (max-width: 900px) {
+  .main__select-day {
+    width: 20%;
+  }
 }
 
 .main__image {
@@ -850,9 +1064,35 @@ a {
   margin: 0 -60px 0 0;
 }
 
+@media screen and (max-width: 900px) {
+  .main__image {
+    margin: 0;
+  }
+}
+
 .main__image-car {
   position: relative;
   z-index: 1;
+}
+
+@media screen and (max-width: 900px) {
+  .main__image-car {
+    -webkit-transform: translate(70px, 0);
+        -ms-transform: translate(70px, 0);
+            transform: translate(70px, 0);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .main__image-car img {
+    width: 520px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main__image-car img {
+    width: 400px;
+  }
 }
 
 .main__image-rock {
@@ -864,6 +1104,14 @@ a {
           transform: translate(-50%, -142px);
 }
 
+@media screen and (max-width: 700px) {
+  .main__image-rock {
+    -webkit-transform: translate(-50%, -100px);
+        -ms-transform: translate(-50%, -100px);
+            transform: translate(-50%, -100px);
+  }
+}
+
 .main__image-traced-back {
   position: absolute;
   top: 0;
@@ -871,6 +1119,20 @@ a {
   -webkit-transform: translate(-34%, -74px);
       -ms-transform: translate(-34%, -74px);
           transform: translate(-34%, -74px);
+}
+
+@media screen and (max-width: 900px) {
+  .main__image-traced-back {
+    -webkit-transform: translate(70px, 0);
+        -ms-transform: translate(70px, 0);
+            transform: translate(70px, 0);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .main__image-traced-back img {
+    width: 80%;
+  }
 }
 
 .main__image-traced-front {
@@ -881,6 +1143,20 @@ a {
       -ms-transform: translate(0);
           transform: translate(0);
   z-index: 1;
+}
+
+@media screen and (max-width: 900px) {
+  .main__image-traced-front {
+    -webkit-transform: translate(70px, 0);
+        -ms-transform: translate(70px, 0);
+            transform: translate(70px, 0);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .main__image-traced-front img {
+    width: 80%;
+  }
 }
 
 .modal {
@@ -896,6 +1172,7 @@ a {
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
+  z-index: 10;
 }
 
 .modal._show {
@@ -1091,125 +1368,4 @@ a {
 .modal-btn-phone .info__callback-text {
   font-size: 18px;
   font-weight: 600;
-}
-
-.select {
-  position: relative;
-}
-
-.select._active .select__header {
-  -webkit-border-radius: 8px 8px 0 0;
-          border-radius: 8px 8px 0 0;
-}
-
-.select._active .select__body {
-  display: block;
-}
-
-.select._active .select-icon {
-  -webkit-transform: scale(-1);
-      -ms-transform: scale(-1);
-          transform: scale(-1);
-}
-
-.select__header {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background: #fff;
-  border: 1px solid var(--outline);
-  -webkit-border-radius: 8px;
-          border-radius: 8px;
-  padding: 16px 18px;
-  cursor: pointer;
-  position: relative;
-}
-
-.select-current {
-  font-size: 18px;
-}
-
-.select-icon {
-  width: 9px;
-  height: 9px;
-  pointer-events: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.select-icon img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.select-label {
-  position: absolute;
-  top: -1px;
-  left: 12px;
-  font-size: 12px;
-  color: var(--second);
-  padding: 0 8px;
-  background: #fff;
-  z-index: 1;
-}
-
-.select-label-text {
-  display: inline-block;
-  -webkit-transform: translate(0, -50%);
-      -ms-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-}
-
-.select__body {
-  position: absolute;
-  bottom: 1px;
-  left: 0;
-  width: 100%;
-  -webkit-transform: translate(0, 100%);
-      -ms-transform: translate(0, 100%);
-          transform: translate(0, 100%);
-  display: none;
-  max-height: 150px;
-  background: #fff;
-  border: 1px solid var(--outline);
-  -webkit-border-radius: 0 0 8px 8px;
-          border-radius: 0 0 8px 8px;
-  margin: -1px 0 0 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 1;
-}
-
-.select-item {
-  text-transform: uppercase;
-  background: #fff;
-  padding: 12px 18px;
-  cursor: pointer;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.select-item:nth-child(odd) {
-  background: #fcfcfc;
-}
-
-.select-item:hover {
-  background: #f7f7f7;
 }
