--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -9,6 +9,7 @@
   overflow-x: hidden;
   pointer-events: none;
   transition: $transition;
+  z-index: 10;
 
   &._show {
     background: rgba(46, 139, 248, 0.85);
