--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,7 @@ a {
 
 @media screen and (min-width: 768px) {
   .btn-outline:hover {
-    -webkit-transform: translate(0, -4px);
-        -ms-transform: translate(0, -4px);
-            transform: translate(0, -4px);
+    background: var(--accent-second);
   }
 }
 
@@ -1368,4 +1366,413 @@ a {
 .modal-btn-phone .info__callback-text {
   font-size: 18px;
   font-weight: 600;
+}
+
+.park {
+  margin: 80px 0 0 0;
+}
+
+.park-title {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--second);
+  margin: 0 0 12px 0;
+}
+
+@media screen and (max-width: 1100px) {
+  .park__class .container {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .park__class-title {
+    padding: 0 24px;
+  }
+}
+
+.park__class__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 12px;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+
+@media screen and (max-width: 1100px) {
+  .park__class__list {
+    padding: 0 24px;
+  }
+}
+
+.park__class__item {
+  max-width: 280px;
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border: 1px solid var(--outline);
+  -webkit-border-radius: 16px;
+          border-radius: 16px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.park__class__item:hover {
+  border: 1px solid var(--accent);
+}
+
+.park__class__item._active {
+  background: var(--accent-second);
+  border: 1px solid var(--accent-second);
+}
+
+.park__class-img {
+  width: 100%;
+  height: 122px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.park__class__item__content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 20px 0 0 0;
+  padding: 0 52px 36px;
+}
+
+.park__class__item-title {
+  font-size: 18px;
+}
+
+.park__class-price {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 4px 0 0 0;
+}
+
+.park__class-correction {
+  font-size: 14px;
+}
+
+.park__car {
+  margin: 32px 0 0 0;
+}
+
+.park__car__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -webkit-column-gap: 32px;
+     -moz-column-gap: 32px;
+          column-gap: 32px;
+  row-gap: 32px;
+}
+
+@media screen and (max-width: 1120px) {
+  .park__car__list {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .park__car__list {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+  }
+}
+
+.park__car-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 384px;
+  width: 100%;
+  background: #fff;
+  border: 1px solid var(--outline);
+  -webkit-border-radius: 16px;
+          border-radius: 16px;
+  padding: 32px 0;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.park__car-item:hover {
+  -webkit-box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+          box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+}
+
+.park__car-item._sale .park__car-sale {
+  display: block;
+}
+
+.park__car-item._sale .park__car__price-old {
+  display: block;
+}
+
+.park__car__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 24px;
+}
+
+.park__car__character {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.park__car__character:not(:last-child) {
+  margin: 0 16px 0 0;
+}
+
+.park__car__character:last-child {
+  margin: 0 auto 0 0;
+}
+
+.park__car__character-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.park__car__character-icon img {
+  width: 100%;
+  height: 100%;
+}
+
+.park__car__character-text {
+  margin: 0 0 -2px 8px;
+}
+
+.park__car-sale {
+  display: none;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 2px 8px;
+  background: var(--accent-second);
+  margin: 0 0 0 auto;
+}
+
+.park__car-img {
+  width: 100%;
+  margin: 12px 0 0 0;
+}
+
+.park__car-img img {
+  width: 100%;
+}
+
+.park__car__content {
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 24px 0 0 0;
+  padding: 0 32px;
+}
+
+@media screen and (max-width: 370px) {
+  .park__car__content {
+    padding: 0 24px;
+  }
+}
+
+.park__car-class {
+  font-size: 14px;
+  color: var(--third);
+}
+
+.park__car-item-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 8px 0 0 0;
+}
+
+.park__car__parameters {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 16px 0 auto 0;
+}
+
+.park__car__parameter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.park__car__parameter-title {
+  font-size: 12px;
+  color: var(--third);
+}
+
+.park__car__parameter-descr {
+  font-size: 16px;
+  margin: 4px 0 0 0;
+}
+
+@media screen and (max-width: 370px) {
+  .park__car__parameter-descr {
+    font-size: 14px;
+  }
+}
+
+.park__car__footer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin: 16px 0 0 0;
+}
+
+.park__car__price {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.park__car__price-old {
+  display: none;
+  font-size: 14px;
+  font-weight: 700;
+  text-decoration: line-through;
+  margin: 0 0 -2px 0;
+}
+
+.park__car__price-all {
+  font-size: 36px;
+  font-weight: 600;
+  color: var(--accent);
+}
+
+@media screen and (max-width: 1220px) and (min-width: 1121px), screen and (max-width: 820px) {
+  .park__car__price-all {
+    font-size: 28px;
+  }
+}
+
+.park__car__price-correction {
+  font-size: 14px;
+  color: var(--third);
+}
+
+@media screen and (max-width: 1220px) and (min-width: 1121px), screen and (max-width: 820px) {
+  .park__car-btn {
+    padding: 12px 16px;
+  }
+}
+
+.park__car-more {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 56px 0 0 0;
+}
+
+.park__car-more-link {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 19px 60px;
 }
