--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,10 @@ a {
   }
 }
 
+section {
+  padding: 96px 0;
+}
+
 .btn {
   display: inline-block;
   font-size: 16px;
@@ -1368,10 +1372,6 @@ a {
   font-weight: 600;
 }
 
-.park {
-  padding: 96px 0;
-}
-
 .park-title {
   font-size: 12px;
   font-weight: 400;
@@ -1779,7 +1779,6 @@ a {
 }
 
 .rental {
-  padding: 96px 0;
   background: #fff;
 }
 
@@ -1908,4 +1907,281 @@ a {
   font-size: 18px;
   font-weight: 600;
   text-align: center;
+}
+
+.reviews__body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews__slider {
+  max-width: 800px;
+  width: 100%;
+  margin: 64px 0 0 0;
+  position: relative;
+}
+
+@media screen and (max-width: 1120px) {
+  .reviews__slider {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .reviews__slider {
+    max-width: 500px;
+  }
+}
+
+.reviews__item {
+  max-width: 800px;
+  width: 100%;
+  background: #fff;
+  -webkit-border-radius: 16px;
+          border-radius: 16px;
+  padding: 32px;
+}
+
+@media screen and (max-width: 1120px) {
+  .reviews__item {
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .reviews__item {
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .reviews__item {
+    padding: 24px;
+  }
+}
+
+.reviews__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+.reviews__user {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews__user-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.reviews__user-name {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0 0 0 18px;
+}
+
+@media screen and (max-width: 400px) {
+  .reviews__user-name {
+    font-size: 16px;
+    margin: 0 0 0 8px;
+  }
+}
+
+.reviews__estim {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews__estim__stars {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews__estim-star {
+  width: 15px;
+  height: 15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.reviews__estim-star:not(:last-child) {
+  margin: 0 4px 0 0;
+}
+
+.reviews__estim-text {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0 0 0 16px;
+}
+
+@media screen and (max-width: 400px) {
+  .reviews__estim-text {
+    margin: 0 0 0 8px;
+  }
+}
+
+.reviews__content {
+  margin: 16px 0 0 0;
+}
+
+.reviews-text {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.reviews-date {
+  display: inline-block;
+  font-size: 12px;
+  color: var(--third);
+  margin: 16px 0 0 0;
+}
+
+.reviews-btn-more {
+  margin: 56px 0 0 0;
+}
+
+.reviews-btn-more-link {
+  display: inline-block;
+  width: 280px;
+  text-align: center;
+}
+
+@media screen and (max-width: 650px) {
+  .reviews__arrows {
+    display: none;
+  }
+}
+
+.reviews__arrows-left {
+  position: absolute;
+  top: 50%;
+  left: -110px;
+  width: 24px;
+  height: 24px;
+  -webkit-transform: translate(-100%, -50%);
+      -ms-transform: translate(-100%, -50%);
+          transform: translate(-100%, -50%);
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.reviews__arrows-left img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1120px) {
+  .reviews__arrows-left {
+    left: -32px;
+  }
+}
+
+.reviews__arrows-right {
+  position: absolute;
+  top: 50%;
+  right: -110px;
+  width: 24px;
+  height: 24px;
+  -webkit-transform: translate(100%, -50%);
+      -ms-transform: translate(100%, -50%);
+          transform: translate(100%, -50%);
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.reviews__arrows-right img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1120px) {
+  .reviews__arrows-right {
+    right: -32px;
+  }
+}
+
+.reviews__arrows-left:hover svg path,
+.reviews__arrows-right:hover svg path {
+  stroke: var(--accent);
+}
+
+.reviews__pagination {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 32px 0 0 0;
+}
+
+.reviews__pagination span {
+  width: 5px;
+  height: 5px;
+  background: var(--main);
+}
+
+.reviews__pagination span:not(:last-child) {
+  margin: 0 16px 0 0;
 }
