--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,7 +97,7 @@ a {
 
 //<ОБЩИЕ СТИЛИ>==================================================================================
 section {
-  // padding: 50px 0;
+  padding: 96px 0;
 }
 
 .btn {
@@ -192,3 +192,4 @@ section {
 @import 'blocks/_modal';
 @import 'blocks/_park';
 @import 'blocks/_rental';
+@import 'blocks/_reviews';
