--- a/scss/blocks/__footer.scss
+++ b/scss/blocks/__footer.scss
@@ -36,6 +36,11 @@
   }
 }
 
+.footer__menu {
+  border-top: 1px solid $bg;
+  border-bottom: 1px solid $bg;
+}
+
 .footer__menu__body {
   display: grid;
   grid-template-columns: repeat(4,1fr);
@@ -118,7 +123,6 @@ a.footer__column-item-text {
 }
 
 .footer__more {
-  border-top: 1px solid $outline;
   padding: 32px 0;
 }
 
