--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ section {
           transform: scale(-1);
 }
 
-.select__header {
+.input {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -326,7 +326,7 @@ section {
      object-fit: contain;
 }
 
-.select-label {
+.input-label {
   position: absolute;
   top: -1px;
   left: 12px;
@@ -334,17 +334,22 @@ section {
   color: var(--second);
   padding: 0 8px;
   background: #fff;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   z-index: 1;
 }
 
 @media screen and (max-width: 420px) {
-  .select-label {
+  .input-label {
     left: 6px;
     padding: 0 6px;
   }
 }
 
-.select-label-text {
+.input-label span {
   display: inline-block;
   -webkit-transform: translate(0, -50%);
       -ms-transform: translate(0, -50%);
@@ -2392,4 +2397,141 @@ a.footer__column-item-text:hover {
   .footer-work-time {
     text-align: left;
   }
+}
+
+.modal__form {
+  margin: 24px 0 0 0;
+  padding: 0 24px 32px;
+}
+
+.modal-callback__inputs {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.modal-callback__inputs .input-label {
+  top: 0;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+.modal__input {
+  width: 100%;
+  position: relative;
+}
+
+.modal__input:nth-child(1) {
+  margin: 0 32px 0 0;
+}
+
+.modal__input input {
+  width: 100%;
+  height: 100%;
+  cursor: text;
+}
+
+.modal-callback__checkbox {
+  position: relative;
+  margin: 16px 0 0 0;
+}
+
+.modal-callback__checkbox input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.modal-callback__checkbox label {
+  font-size: 14px;
+}
+
+.modal-callback__checkbox label a {
+  position: relative;
+  color: var(--accent);
+  z-index: 1;
+}
+
+.modal-callback__checkbox label {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  font-size: 14px;
+  white-space: nowrap;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.modal-callback__checkbox label:before {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #19A955;
+  background-color: #fff;
+  margin: 0 0.5em 0 0;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-background-size: 80% 80%;
+          background-size: 80%;
+}
+
+.modal-callback__checkbox label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: #19A955;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.modal-callback__checkbox input:not(:disabled):not(:checked):active + label::before {
+  background-color: rgba(119, 178, 49, 0.3);
+  border-color: rgba(119, 178, 49, 0.6);
+}
+
+.modal-callback__checkbox input:checked + label::after {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.modal-callback-btn {
+  max-width: 250px;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 24px 0 0 0;
 }
