--- a/css/style.css
+++ b/css/style.css
@@ -1257,9 +1257,21 @@ section {
   padding: 24px 24px 0;
 }
 
+@media screen and (max-width: 490px) {
+  .modal__header {
+    padding: 24px 16px 0;
+  }
+}
+
 .modal-title {
   font-size: 24px;
   font-weight: 600;
+}
+
+@media screen and (max-width: 490px) {
+  .modal-title {
+    font-size: 18px;
+  }
 }
 
 .modal-close {
@@ -2404,6 +2416,12 @@ a.footer__column-item-text:hover {
   padding: 0 24px 32px;
 }
 
+@media screen and (max-width: 490px) {
+  .modal__form {
+    padding: 0 16px 32px;
+  }
+}
+
 .modal-callback__inputs {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2426,6 +2444,16 @@ a.footer__column-item-text:hover {
           transform: translate(0, -50%);
 }
 
+@media screen and (max-width: 490px) {
+  .modal-callback__inputs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .modal__input {
   width: 100%;
   position: relative;
@@ -2433,6 +2461,12 @@ a.footer__column-item-text:hover {
 
 .modal__input:nth-child(1) {
   margin: 0 32px 0 0;
+}
+
+@media screen and (max-width: 490px) {
+  .modal__input:nth-child(1) {
+    margin: 0 0 16px 0;
+  }
 }
 
 .modal__input input {
@@ -2460,9 +2494,21 @@ a.footer__column-item-text:hover {
 }
 
 .modal-callback__checkbox label a {
+  display: inline-block;
   position: relative;
   color: var(--accent);
   z-index: 1;
+  margin: 0 0 0 4px;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 490px) {
+  .modal-callback__checkbox label a {
+    font-size: 14px;
+  }
 }
 
 .modal-callback__checkbox label {
@@ -2486,6 +2532,7 @@ a.footer__column-item-text:hover {
 .modal-callback__checkbox label:before {
   content: '';
   display: inline-block;
+  min-width: 20px;
   width: 20px;
   height: 20px;
   border: 1px solid #19A955;
@@ -2534,4 +2581,11 @@ a.footer__column-item-text:hover {
   font-size: 18px;
   font-weight: 600;
   margin: 24px 0 0 0;
+}
+
+@media screen and (max-width: 490px) {
+  .modal-callback-btn {
+    max-width: none;
+    width: 100%;
+  }
 }
