--- a/scss/style.scss
+++ b/scss/style.scss
@@ -117,11 +117,11 @@ section {
   //   padding: 16px 32px;
   // }
 
-  @media screen and (min-width: $minHover) {
-    &:hover {
-      // transform: translate(0,-4px);
-    }
-  }
+  // @media screen and (min-width: $minHover) {
+  //   &:hover {
+  //     // transform: translate(0,-4px);
+  //   }
+  // }
 }
 
 .btn-outline {
