--- a/scss/blocks/_modal-callback.scss
+++ b/scss/blocks/_modal-callback.scss
@@ -12,11 +12,6 @@
   align-items: center;
   justify-content: space-between;
 
-  & .input-label {
-    top: 0;
-    transform: translate(0,-50%);
-  }
-
   @media screen and (max-width: 490px) {
     flex-direction: column;
   }
@@ -37,7 +32,13 @@
   & input {
     width: 100%;
     height: 100%;
+    font-size: 14px;
     cursor: text;
+  }
+
+  & .input-label {
+    top: 0;
+    transform: translate(0,-50%);
   }
 }
 
@@ -107,6 +108,7 @@
     height: 10px;
     background: #19A955;
     transition: $transition;
+    pointer-events: none;
   }
 
   & input:not(:disabled):not(:checked):active + label::before {
