--- a/scss/style.scss
+++ b/scss/style.scss
@@ -195,3 +195,4 @@ section {
 @import 'blocks/_reviews';
 @import 'blocks/_footer';
 @import 'blocks/_modal-callback';
+@import 'blocks/_modal-rent';
