--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -164,7 +164,7 @@
   transform: translate(-34%,-74px);
 
   @media screen and (max-width: 900px) {
-    transform: translate(70px,0);
+    transform: translate(70px,-60px); 
   }
 
   @media screen and (max-width: 700px) {
