--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,3 +196,4 @@ section {
 @import 'blocks/_footer';
 @import 'blocks/_modal-callback';
 @import 'blocks/_modal-rent';
+@import 'blocks/_modal-condition';
