--- a/scss/blocks/_park-car.scss
+++ b/scss/blocks/_park-car.scss
@@ -28,10 +28,41 @@
   border: 1px solid $outline;
   border-radius: 16px;
   padding: 32px 0;
+  transform: scale(.5);
+  opacity: 0;
   transition: $transition;
 
   &:hover {
     box-shadow: 0px 8px 32px rgba(26, 109, 186, 0.08);
+  }
+
+  &._show {
+    transform: scale(1);
+    opacity: 1;
+    
+    // &:nth-child(1) {
+    //   transition-delay: .1s; 
+    // }
+
+    // &:nth-child(2) {
+    //   transition-delay: .2s;
+    // }
+
+    // &:nth-child(3) {
+    //   transition-delay: .3s;
+    // }
+
+    // &:nth-child(4) {
+    //   transition-delay: .4s;
+    // }
+
+    // &:nth-child(5) {
+    //   transition-delay: .5s;
+    // }
+
+    // &:nth-child(6) {
+    //   transition-delay: .6s;
+    // } 
   }
 
   &._sale {
