--- a/scss/blocks/_reviews.scss
+++ b/scss/blocks/_reviews.scss
@@ -122,6 +122,8 @@
 .reviews-btn-more-link {
   display: inline-block;
   width: 280px;
+  font-size: 16px;
+  font-weight: 600;
   text-align: center;
 }
 
