--- a/scss/style.scss
+++ b/scss/style.scss
@@ -183,6 +183,12 @@ section {
   }
 }
 
+.breadcrumbs {
+  font-size: 12px;
+  color: $third;
+  margin: 0 0 8px 0; 
+}
+
 @import 'blocks/_select';
 
 //<ПОДКЛЮЧАЕМ БЛОКИ>==================================================================================
@@ -197,3 +203,4 @@ section {
 @import 'blocks/_modal-callback';
 @import 'blocks/_modal-rent';
 @import 'blocks/_modal-condition';
+@import 'blocks/_modal-review';
