--- a/css/contacts.css
+++ b/css/contacts.css
@@ -36,32 +36,26 @@
   }
 }
 
-.breadcrumbs {
-  font-size: 12px;
-  color: var(--third);
-}
-
 @media screen and (max-width: 820px) {
-  .breadcrumbs {
+  .autopark-breadcrumbs {
     padding: 64px 64px 0;
   }
 }
 
 @media screen and (max-width: 680px) {
-  .breadcrumbs {
+  .autopark-breadcrumbs {
     padding: 32px 32px 0;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .breadcrumbs {
+  .autopark-breadcrumbs {
     padding: 24px 24px 0;
   }
 }
 
 .contacts-title {
   font-size: 48px;
-  margin: 8px 0 0 0;
 }
 
 @media screen and (max-width: 820px) {
