--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,12 @@ section {
   background: rgba(15, 124, 255, 0.2);
 }
 
+.breadcrumbs {
+  font-size: 12px;
+  color: var(--third);
+  margin: 0 0 8px 0;
+}
+
 .select {
   position: relative;
 }
@@ -379,7 +385,7 @@ section {
   margin: -1px 0 0 0;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 1;
+  z-index: 10;
 }
 
 .select-item {
@@ -1491,6 +1497,18 @@ section {
           transform: scale(1);
 }
 
+@media screen and (max-width: 960px) {
+  .park__class__item {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .park__class__item {
+    width: 230px;
+  }
+}
+
 .park__class-img {
   width: 100%;
   height: 122px;
@@ -1506,6 +1524,12 @@ section {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .park__class-img {
+    height: 100px;
+  }
 }
 
 .park__class__item__content {
@@ -1524,6 +1548,12 @@ section {
           align-items: flex-start;
   margin: 20px 0 0 0;
   padding: 0 52px 36px;
+}
+
+@media screen and (max-width: 600px) {
+  .park__class__item__content {
+    padding: 0 32px 24px;
+  }
 }
 
 .park__class__item-title {
@@ -2915,6 +2945,179 @@ a.footer__column-item-text:hover {
 
 @media screen and (max-width: 490px) {
   .modal-condition-btn {
+    max-width: none;
+  }
+}
+
+.modal-review-form {
+  padding: 24px;
+}
+
+@media screen and (max-width: 490px) {
+  .modal-review-form {
+    padding: 24px 16px;
+  }
+}
+
+.modal-review-textarea {
+  height: 100px;
+  margin: 32px 0 0 0;
+}
+
+.modal-review-textarea textarea {
+  width: 100%;
+  height: 100%;
+}
+
+.modal-review__footer {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 24px 0 0 0;
+}
+
+@media screen and (max-width: 510px) {
+  .modal-review__footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .modal-review__estimation {
+    width: 100%;
+  }
+}
+
+.modal-review__estimation-title {
+  font-size: 14px;
+  color: var(--second);
+}
+
+.modal-review__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  margin: 8px 0 0 0;
+}
+
+@media screen and (max-width: 510px) {
+  .modal-review__list {
+    width: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.modal-review-star {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.modal-review-star svg {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.modal-review-star:not(:first-child) {
+  margin: 0 16px 0 0;
+}
+
+.modal-review-star:nth-child(5):hover svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(4):hover svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(4):hover ~ .modal-review-star:nth-child(5) svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(3):hover svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(3):hover ~ .modal-review-star:nth-child(5) svg path,
+.modal-review-star:nth-child(3):hover ~ .modal-review-star:nth-child(4) svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(2):hover svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(2):hover ~ .modal-review-star:nth-child(5) svg path,
+.modal-review-star:nth-child(2):hover ~ .modal-review-star:nth-child(4) svg path,
+.modal-review-star:nth-child(2):hover ~ .modal-review-star:nth-child(3) svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(1):hover svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star:nth-child(1):hover ~ .modal-review-star:nth-child(5) svg path,
+.modal-review-star:nth-child(1):hover ~ .modal-review-star:nth-child(4) svg path,
+.modal-review-star:nth-child(1):hover ~ .modal-review-star:nth-child(3) svg path,
+.modal-review-star:nth-child(1):hover ~ .modal-review-star:nth-child(2) svg path {
+  fill: #EFAB45;
+}
+
+.modal-review-star._fill svg path {
+  fill: #EFAB45;
+}
+
+@media screen and (max-width: 510px) {
+  .modal-review-star {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+.modal-review-btn {
+  max-width: 250px;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 24px 0 0 0;
+}
+
+@media screen and (max-width: 510px) {
+  .modal-review-btn {
     max-width: none;
   }
 }
