--- a/scss/blocks/_park-class.scss
+++ b/scss/blocks/_park-class.scss
@@ -65,6 +65,13 @@
       // }
     }
   }
+
+  @media screen and (max-width: 960px) {
+    width: 250px;
+  }
+  @media screen and (max-width: 600px) {
+    width: 230px;
+  }
 }
 
 .park__class-img  {
@@ -73,6 +80,10 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+
+  @media screen and (max-width: 600px) {
+    height: 100px;
+  }
 }
 
 .park__class__item__content {
@@ -81,6 +92,10 @@
   align-items: flex-start;
   margin: 20px 0 0 0;
   padding: 0 52px 36px;
+
+  @media screen and (max-width: 600px) {
+    padding: 0 32px 24px;
+  }
 }
 
 .park__class__item-title {
